# oxidor

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  prebuilt.yml
oxidor/: Cargo.toml  build.rs
oxidor-algorithms/: Cargo.toml  build.rs
oxidor-algorithms/src/: assignment.rs  error.rs  flow.rs  knapsack.rs  lib.rs
oxidor-algorithms/tests/: solve.rs
oxidor-cpsat/: Cargo.toml  build.rs
oxidor-cpsat/examples/: nurse_scheduling.rs
oxidor-cpsat/src/: callbacks.rs  domain.rs  expr.rs  lib.rs  model.rs  solver.rs
oxidor-cpsat/tests/: callbacks.rs  solve.rs
oxidor-mathopt/: Cargo.toml
oxidor-mathopt/src/: expr.rs  lib.rs  model.rs  solve.rs
oxidor-mathopt/tests/: solve.rs
oxidor-protos/: Cargo.toml
oxidor-protos/src/: lib.rs
oxidor-protos/tests/: roundtrip.rs
oxidor-routing/: Cargo.toml
oxidor-routing/src/: lib.rs  problem.rs  solve.rs
oxidor-routing/tests/: solve.rs
oxidor-sys/: Cargo.toml  build.rs  prebuilt-checksums.txt
oxidor-sys/cpp/: oxidor_shim.cc
oxidor-sys/src/: lib.rs
oxidor/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
