[workspace]
resolver = "3"
members = ["oxidor", "oxidor-sys", "oxidor-protos", "oxidor-cpsat", "xtask"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
authors = ["Venus"]
repository = "https://github.com/coldsmirk/oxidor"
keywords = ["or-tools", "ortools", "optimization", "cp-sat", "solver"]
categories = ["mathematics", "science", "api-bindings"]

[workspace.dependencies]
oxidor-sys = { version = "0.0.1", path = "oxidor-sys" }
oxidor-protos = { version = "0.0.1", path = "oxidor-protos" }
oxidor-cpsat = { version = "0.0.1", path = "oxidor-cpsat", default-features = false }
