[package]
name = "oxidor-algorithms"
description = "Google OR-Tools classic algorithms for Rust: knapsack, max flow, min cost flow (part of oxidor)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
oxidor-sys = { workspace = true, features = ["shim"] }
libc = "0.2"
