[package]
name = "oxidor-cpsat"
description = "Idiomatic Rust API for the Google OR-Tools CP-SAT solver (part of oxidor)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
oxidor-sys = { workspace = true }
oxidor-protos = { workspace = true }
