[package]
name = "oxidor-cpsat"
description = "Idiomatic Rust API for the Google OR-Tools CP-SAT solver (part of oxidor)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
oxidor-protos = { workspace = true }
oxidor-sys = { workspace = true, optional = true }
libc = { version = "0.2", optional = true }

[features]
default = ["solve"]
# Solving links the native OR-Tools library (see oxidor-sys). Without this
# feature the crate is pure Rust: models can be built and serialized anywhere.
solve = ["dep:oxidor-sys", "dep:libc"]

[package.metadata.docs.rs]
# The DOCS_RS guard in oxidor-sys's build script makes every feature safe to
# document without a native library.
all-features = true
