[package]
name = "oxidor-mathopt"
description = "Idiomatic Rust API for Google OR-Tools MathOpt — LP and MIP solving (part of oxidor)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
oxidor-protos = { workspace = true }
oxidor-sys = { workspace = true, optional = true }
libc = { version = "0.2", optional = true }

[features]
default = ["solve"]
# Solving links the native OR-Tools library and compiles Oxidor's C++ shim
# (the upstream MathOpt C API takes no per-solve parameters, so solving goes
# through the shim; it needs the OR-Tools headers and a C++20 compiler).
# Without this feature the crate is pure Rust: models can be built and
# serialized anywhere.
solve = ["dep:oxidor-sys", "oxidor-sys/shim", "dep:libc"]

[package.metadata.docs.rs]
# The DOCS_RS guard in oxidor-sys's build script makes every feature safe to
# document without a native library.
all-features = true
