[package]
name = "oxidor-protos"
description = "Generated protobuf model types for Google OR-Tools (part of oxidor)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
# Upstream proto comments contain pseudo-code blocks that rustdoc would treat
# as Rust doctests; real coverage lives in tests/.
doctest = false

[dependencies]
prost = "0.14.4"
prost-types = "0.14.4"
