[package]
name = "oxidor-sys"
description = "Native library linkage and raw FFI for Google OR-Tools (part of oxidor)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
links = "ortools"

[dependencies]

[build-dependencies]
cc = "1"

[features]
# Compiles cpp/oxidor_shim.cc — Oxidor's own C bridge for OR-Tools APIs that
# ship no upstream C API (routing, algorithms). Needs the OR-Tools headers
# next to the library and a C++20 compiler.
shim = []
