[package]
name = "oxidor"
description = "Unofficial Rust bindings for Google OR-Tools — umbrella crate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
# A pure re-export crate has no unit tests; its empty test binary would still
# load the OR-Tools shared library for nothing.
test = false

[dependencies]
oxidor-cpsat = { workspace = true, optional = true }
oxidor-mathopt = { workspace = true, optional = true }
oxidor-routing = { workspace = true, optional = true }
oxidor-algorithms = { workspace = true, optional = true }
# Direct dependency so build.rs receives DEP_ORTOOLS_LIBDIR for the doctest
# rpath (the metadata of a `links` crate reaches direct dependents only).
oxidor-sys = { workspace = true, optional = true }

[features]
# Solving (any family) compiles Oxidor's C++ shim, which needs the OR-Tools
# headers and a C++20 compiler — official archives and the prebuilt bundles
# both ship the headers, so the default set enables everything.
default = ["cpsat", "callbacks", "mathopt", "routing", "algorithms", "solve"]
# The CP-SAT constraint programming solver API.
cpsat = ["dep:oxidor-cpsat"]
# The MathOpt LP/MIP solving API.
mathopt = ["dep:oxidor-mathopt"]
# Vehicle routing (TSP/VRP with time windows, pickups-deliveries).
routing = ["dep:oxidor-routing"]
# Knapsack, max flow, min cost flow, linear sum assignment. No pure-model
# subset — enabling this always links.
algorithms = ["dep:oxidor-algorithms"]
# Link the native OR-Tools library. Without it, models can be built and
# serialized but not solved locally.
solve = ["oxidor-cpsat?/solve", "oxidor-mathopt?/solve", "oxidor-routing?/solve", "dep:oxidor-sys"]
# Streaming CP-SAT solution callbacks (solve_with_solution_callback). Same
# C++ shim requirement as `routing`.
callbacks = ["cpsat", "solve", "oxidor-cpsat/callbacks"]
# When ORTOOLS_PREFIX is not set, fetch a SHA-256-verified static OR-Tools
# bundle from this project's GitHub releases instead — zero local setup.
download-prebuilt = ["solve", "oxidor-sys/download-prebuilt"]

[package.metadata.docs.rs]
# The DOCS_RS guard in oxidor-sys's build script makes every feature safe to
# document without a native library.
all-features = true
